--- a/app/views/workallocation/pages/wa-show-work-filter-error-trigger.html
+++ b/app/views/workallocation/pages/wa-show-work-filter-error-trigger.html
@@ -19,13 +19,13 @@ My work
           </a>
       </li>
       <li>
-          <a href="#select-a-type-of-work-error">
-            Select a type of work
+          <a href="#select-a-location-error">
+            Enter a location
           </a>
       </li>
       <li>
-          <a href="#select-a-location-error">
-            Enter a location
+          <a href="#select-a-type-of-work-error">
+            Select a type of work
           </a>
       </li>
     </ul>
@@ -97,7 +97,7 @@ My work
           <label class="govuk-body" for="location-picker">
             Search for a location by name
           </label>
-          <select id="location-picker" name="locationPicker" autofocus>
+          <select id="location-picker" name="locationPicker">
             <option value=" " {% if data.locationPicker == ' ' %} selected {% endif %}> </option>
             <option value="Birmingham Civil and Family Justice Centre" {% if data.locationPicker == 'Birmingham Civil and Family Justice Centre' %} selected {% endif %}>Birmingham Civil and Family Justice Centre</option>
             <option value="Bradford Tribunal Hearing Centre" {% if data.locationPicker == 'Bradford Tribunal Hearing Centre' %} selected {% endif %}>Bradford Tribunal Hearing Centre</option>
