SSCS Demo for Helen Gracie
Journey one almost completed

--- a/app/views/sscs/pages/Journey1-Page0.html
+++ b/app/views/sscs/pages/Journey1-Page0.html
@@ -5,6 +5,9 @@ Case details
 {% endblock %}
 
 {% block content %}
+<div style="width: 98.5%; background-color:#00823b; color:#fff; padding:10px;margin:0px 0 20px 0; font-family:Arial;">
+  Case #1621848283943248 has been updated with event: Review PHME request
+</div>
 <main class="" id="main-content" role="main">
   <div class=""  style="display: flex; justify-content: space-between;">
     <div style="display: flex;">
