--- a/app/views/sscs/pages/Journey1-Page2.html
+++ b/app/views/sscs/pages/Journey1-Page2.html
@@ -52,7 +52,7 @@ Case details
             {{ govukButton({
               text: "Continue",
               classes: "govuk-button",
-              href: ""}) }}
+              href: "Journey1-Page3"}) }}
             <br>
             <a href="">Cancle</a>
         </div>
