--- a/app/views/sscs/pages/Journey1-Page3.html
+++ b/app/views/sscs/pages/Journey1-Page3.html
@@ -44,7 +44,7 @@ Case details
             {{ govukButton({
               text: "Continue",
               classes: "govuk-button",
-              href: ""}) }}
+              href: "Journey1-Page0"}) }}
             <br>
             <a href="">Cancle</a>
         </div>
