--- a/app/views/sscs/index.html
+++ b/app/views/sscs/index.html
@@ -7,12 +7,11 @@
 
 {% block content %}
 
-<h1>Testing</h1>
-
-
-
-
-
-
+<h1>SSCS Demo</h1>
+<p>
+  <a target="_blank" href="/sscs/pages/wa-mytasks">
+    Start Demo
+  </a>
+</p>
 
 {% endblock %}
