--- a/app/views/sscs/layoutstaff.html
+++ b/app/views/sscs/layoutstaff.html
@@ -50,7 +50,7 @@
       <div style=" display: flex; justify-content: space-between;">
 
           <div class="hmcts-header__logo"  style="margin-left: 15px;  padding-top: 8px;, padding-bottom: 6px;">
-              <a class="hmcts-header__link" href="/v2/noticeofchange/solicitor/caselist">Trubunals</a>
+              <a class="hmcts-header__link" href="/v2/noticeofchange/solicitor/caselist">Tribunals</a>
           </div>
 
           <div class="hmcts-header__logo" style="flex-grow: 1">
