SSCS Demo for Helen Gracie
Added a link so that user can go back to task list page

--- a/app/views/sscs/pages/Journey2-wa-available-tasks.html
+++ b/app/views/sscs/pages/Journey2-wa-available-tasks.html
@@ -19,12 +19,12 @@ My work
     <nav class="hmcts-sub-navigation">
       <ul class="hmcts-sub-navigation__list">
         <li class="hmcts-sub-navigation__item">
-          <a class="hmcts-sub-navigation__link" aria-current="page" href="wa-mytasks">
+          <a class="hmcts-sub-navigation__link" href="Journey2-wa-mytasks">
             My tasks
           </a>
         </li>
         <li class="hmcts-sub-navigation__item">
-          <a class="hmcts-sub-navigation__link" href="wa-available-tasks">
+          <a class="hmcts-sub-navigation__link" aria-current="page" href="Journey2-wa-available-tasks">
             Available tasks
           </a>
         </li>
@@ -66,13 +66,7 @@ My work
           classes: "govuk-tag--red"
         })}} --> {{ now |  date("subtract", 0, "day") | date( "D MMMM YYYY" ) }}</td>
           <!--  <td class="govuk-table__cell">14 Mar 2021</td> -->
-          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-        </tr>
-        <tr class="govuk-table__row">
-          <td colspan="7" class="right">
-            <a href="" class="right">Reassign</a>
-            <a href="" class="right">Unassign</a>
-            <a href="Journey1-Page1" class="right_tl">Go to task</a></td>
+          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
         </tr>
         <tr class="govuk-table__row">
 
@@ -86,7 +80,7 @@ My work
           classes: "govuk-tag--yellow"
         })}} --> {{ now |  date("add", 0, "day") | date( "D MMMM YYYY" ) }}</td>
           <!--  <td class="govuk-table__cell">14 Mar 2021</td> -->
-          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
+          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="/sscs/pages/Journey2-wa-available-tasks-o" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
         </tr>
         <tr class="govuk-table__row">
 
