SSCS Demo for Helen Gracie
Typo

--- a/app/views/sscs/layoutstaff.html
+++ b/app/views/sscs/layoutstaff.html
@@ -131,7 +131,7 @@
                               font-weight: 400;
                                   font-size: 1.0rem;;
                           line-height: 1.25;
-                          border: none;"  href="wa-mytasks">Task list</a>
+                          border: none;"  href="wa-mytasks">Task List</a>
                   </li>
 
 
