CCUX-204 - Design - Initial Screen for Partial refunds
During the course of a case, multiple payments can be made.  Each payment is comprised of one or more fees.  One, more or even all of the fees may or may not be eligible for refund.  Each fee is related to a service of which multiple quantities can be purchased by the the User (Citizen).  Each fee can be settled by the user (citizen in one or more transactions, this granularity must also be reflected in the refunds.

--- a/app/views/workallocation/pages/wa-mytasks-refunds-approval.html
+++ b/app/views/workallocation/pages/wa-mytasks-refunds-approval.html
@@ -322,7 +322,7 @@ Refunds
           text: now | date( 'subtract', 1, 'days' ) | date,
           classes: "govuk-tag--grey"
         })}} </td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="https://fees-and-payments.herokuapp.com/orders/pages/refund/view-refund?result=returned&refund=adHoc">Review refund</a></td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="https://fees-and-payments.herokuapp.com/orders/pages/refund/view-refund?result=returned&refund=adHoc">Review</a></td>
         </tr>
         <tr class="govuk-table__row">
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">1630-5919-1394-8513</td>
@@ -333,7 +333,7 @@ Refunds
           text: now | date( 'subtract', 2, 'days' ) | date,
           classes: "govuk-tag--grey"
         })}} </td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="https://fees-and-payments.herokuapp.com/orders/pages/refund/view-refund?result=returned&refund=adHoc">Review refund</a></td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="https://fees-and-payments.herokuapp.com/orders/pages/refund/view-refund?result=returned&refund=adHoc">Review</a></td>
         </tr>
         <tr class="govuk-table__row">
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">1111-1111-1111-1111</td>
@@ -344,7 +344,7 @@ Refunds
           text: now | date( 'subtract', 3, 'days' ) | date,
           classes: "govuk-tag--grey"
         })}} </td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="https://fees-and-payments.herokuapp.com/orders/pages/refund/view-refund?result=returned&refund=adHoc">Review refund</a></td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="https://fees-and-payments.herokuapp.com/orders/pages/refund/view-refund?result=returned&refund=adHoc">Review</a></td>
         </tr>
 
 <!--
