CCUX-204 - Design - Initial Screen for Partial refunds
CONTENT DESIGNER Feedback added

During the course of a case, multiple payments can be made.  Each payment is comprised of one or more fees.  One, more or even all of the fees may or may not be eligible for refund.  Each fee is related to a service of which multiple quantities can be purchased by the the User (Citizen).  Each fee can be settled by the user (citizen in one or more transactions, this granularity must also be reflected in the refunds.

--- a/app/views/orders/pages/refund/partial-refunds-design-option-three.html
+++ b/app/views/orders/pages/refund/partial-refunds-design-option-three.html
@@ -46,7 +46,7 @@
                   What is the name of the event?
                 </span>
               </label>
-              <input class="govuk-input" id="event-name" name="event-name" type="number" style="width: 90px; text-align:center" value="hhhh">
+              <input class="govuk-input" id="event-name" name="event-name" type="text" style="width: 90px; text-align:center" value="£0">
             </div>
           </td>
         </tr>
@@ -108,16 +108,16 @@
   <div class="govuk-button-group">
     {{ govukButton({
       text: "Previous",
-      href: 'transaction',
+      href: '',
       classes: "govuk-button--secondary"
     }) }}
     {{ govukButton({
-      href: 'check-and-send',
+      href: '',
       text: "Continue"
     }) }}
   </div>
   <p>
-    <a href="../v1paymenthistory">Cancel</a>
+    <a href="">Cancel</a>
   </p>
 </div>
 {% endblock %}
